--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <section id="galeria" class="gallery-section">
             <h2>Argazki Galeria</h2>
 
-            <h3>2024ko edizioa</h3>
+            <h3>Prestakuntzako argazkiak</h3>
             <div class="gallery">
                 <img src="1.png" alt="Argazkia 1">
                 <img src="2.png" alt="Argazkia 2">
